# exiv2

./: .clang-format  .clang-format.optional  .cmake-format  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .mergify.yml  .pvsconfig  .travis.yml  AUTHORS  CMakeLists.txt  CMakePresets.json  CMake_msvc.txt  CODING_GUIDELINES.md  CONTRIBUTING.md  Doxyfile  GIT_GUIDELINES.md  LICENSE.txt  Makefile  Makefile.in  README  README-CMAKE  README-CMAKE.md  README-CONAN.md  README-CROSSCOMPILING.md  README-SAMPLES.md  README-XMP  README-cmake  README-meson  README.make  README.md  SECURITY.md  Sigma_35mm_F1.4_DG_HSM_A_for_EOS.exv  TODO-CMAKE  TODO-CMAKE.txt  WORK-IN-PROGRESS  WORK_IN_PROGRESS  appveyor.yml  (+27 more)
app/: CMakeLists.txt  actions.cpp  actions.hpp  app_utils.cpp  app_utils.hpp  exiv2.cpp  exiv2app.hpp  getopt.cpp  getopt.hpp  wmain.c  wmain.cpp
bigtiff/: CMakeLists.txt  parse.cpp
config/: CMakeChecks.txt  ConfigureChecks.cmake  Doxyfile  Doxyfile.in  FindIconv.cmake  FindMSGFMT.cmake  Makefile  Makefile.in  aclocal.m4  compilerFlags.cmake  config.h.cmake  config.h.in  config.make  config.mk.in  configure.ac  exiv2-config.in  exiv2.pc.cmake  exiv2.pc.in  findDependencies.cmake  generateConfigFile.cmake  generateDoc.cmake  ltmain.sh  printSummary.cmake
exiv2app/: CMakeLists.txt  actions.cpp  actions.hpp  exiv2.1  exiv2.cpp  getopt_win32.c  localtime.c  private.h  utils.cpp
fuzz/: CMakeLists.txt  README.md  exiv2.dict  fuzz-preview.cpp  fuzz-read-print-write.cpp  fuzz-read-write.cpp  fuzzloop.sh  knownleaks.txt  mkdictionary.py  mkdictionary.ql  qlpack.yml  read-metadata.cpp
include/: CMakeLists.txt  meson.build
include/exiv2/: CMakeLists.txt  actions.hpp  asfvideo.hpp  basicio.hpp  bigtiffimage.hpp  bmffimage.hpp  bmpimage.hpp  config.h  convert.hpp  cr2image.hpp  crwimage.hpp  datasets.hpp  easyaccess.hpp  epsimage.hpp  error.hpp  exif.hpp  exiv2.hpp  exv_msvc-webready.h  exv_msvc.h  futils.hpp  gifimage.hpp  http.hpp  image.hpp  image_types.hpp  ini.hpp  iptc.hpp  isobmff.hpp  jp2image.hpp  jpgimage.hpp  matroskavideo.hpp  metadatum.hpp  mrwimage.hpp  orfimage.hpp  pgfimage.hpp  photoshop.hpp  pngimage.hpp  preview.hpp  properties.hpp  psdimage.hpp  quicktimevideo.hpp  (+17 more)
po/: CMakeLists.txt  Exiv2.pot  LINGUAS  POTFILES.in  bs.po  ca.po  da.po  de.po  es.po  exiv2.pot  fi.po  fr.po  gl.po  it.po  ka.po  meson.build  ms.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sv.po  ug.po  uk.po  vi.po
samples/: CMakeLists.txt  Jzon.cpp  Jzon.h  Makefile  addmoddel.cpp  conntest.cpp  convert-test.cpp  crwedit.cpp  crwparse.cpp  dataarea-test.cpp  easyaccess-test.cpp  exifcomment.cpp  exifdata-test.cpp  exifdata.cpp  exifprint.cpp  exifvalue.cpp  exiv2json.cpp  exiv2samples.1  geotag.cpp  getopt-test.cpp  httptest.cpp  ifd-test.cpp  ini-test.cpp  ini-test.ini  iotest.cpp  iptceasy.cpp  iptcprint.cpp  iptctest.cpp  jpegparsetest.cpp  key-test.cpp  largeiptc-test.cpp  makernote-test.cpp  metacopy.cpp  metacopy.hpp  mmap-test.cpp  mrwthumb.cpp  mt-test.cpp  path-test.cpp  prevtest.cpp  remotetest.cpp  (+14 more)
src/: CMakeLists.txt  FileIo.cpp  Jzon.cpp  Makefile  MemIo.cpp  RemoteIo.cpp  Todo  actions.cpp  actions.hpp  addmoddel.cpp  asfvideo.cpp  asfvideo.hpp  basicio.cpp  basicio.hpp  bigtiffimage.cpp  bmffimage.cpp  bmpimage.cpp  bmpimage.hpp  canonmn.cpp  canonmn.hpp  canonmn2.cpp  canonmn2.hpp  canonmn_int.cpp  canonmn_int.hpp  casiomn.cpp  casiomn_int.cpp  casiomn_int.hpp  cmd.txt  convert.cpp  convert.hpp  cr2header_int.cpp  cr2header_int.hpp  cr2image.cpp  cr2image.hpp  cr2image_int.cpp  cr2image_int.hpp  crwedit.cpp  crwimage.cpp  crwimage.hpp  crwimage_int.cpp  (+242 more)
src/libheif/: LibHeifRules.cmake  README
tests/: README-TESTS.md  README.md  doc.md  meson.build  requirements.txt  runner.py  suite.conf  system_tests.py  writing_tests.md
tests/bash_test/: test_sample.py  utils.py
tests/bash_tests/: test_Photo_LensSpecification.py  test_easyaccess.py  test_issue_1504.py  test_issue_1996.py  test_jpegparse.py  test_json_output.py  test_pr_1905.py  test_pr_2279.py  test_regression_allfiles.py  test_rename.py  testcases.py  unit_test.py  utils.py  version_test.py
tests/bugfixes/: pylint
tests/lens_tests/: test_canon_lenses.py  test_config_file.py  utils.py
tests/regression_tests/: test_regression_allfiles.py
tests/tiff_test/: test_tag_compare.py  test_tiff_test_program.py
tests/unit_test/: README.md  test_sample.py  utils.py
tests/utils/: __init__.py  common.py  common_code.py  config.py  configs.py  coupled_code.py  exec.py  executer.py  tests.py
trunk/: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CMake_msvc.txt  Doxyfile  Makefile  README  README-CMAKE  README-XMP  README.make  TODO-CMAKE  TODO-CMAKE.txt  bootstrap.linux  bootstrap.macports  buildForMac  config.h  config.h.in  config.mk  config.mk.in  configure.ac  jenkins_build.bat  jenkins_build.sh  jenkins_daily.sh  msvc64\runner.txt
trunk/buildserver/: test_daily.sh
trunk/config/: CMakeChecks.txt  ConfigureChecks.cmake  Doxyfile  FindMSGFMT.cmake  Makefile  Makefile.in  aclocal.m4  config.h.cmake  config.h.in  config.make  config.mk.in  configure.ac  exiv2-config.in  exiv2.lsm.cmake  exiv2.pc.cmake  (+2 more)
unitTests/: CMakeLists.txt  gtestWrapper.h  gtest_helpers.hpp  gtestwrapper.h  mainTestRunner.cpp  meson.build  mock_basicio.hpp  test_DateValue.cpp  test_Error.cpp  test_FileIO.cpp  test_FileIo.cpp  test_ImageFactory.cpp  test_ImageJpeg.cpp  test_IptcKey.cpp  test_LangAltValueRead.cpp  test_MemIo.cpp  test_Photoshop.cpp  test_PngChunks.cpp  test_TimeValue.cpp  test_XmpKey.cpp  test_asfvideo.cpp  test_basicio.cpp  test_bmpimage.cpp  test_cr2header.cpp  test_cr2header_int.cpp  test_datasets.cpp  test_enforce.cpp  test_error.cpp  test_futils.cpp  test_helper_functions.cpp  test_image_int.cpp  test_jp2image.cpp  test_jp2image_int.cpp  test_matroskavideo.cpp  test_pngimage.cpp  test_riffVideo.cpp  test_safe_op.cpp  test_slice.cpp  test_tiffheader.cpp  test_types.cpp  (+9 more)
xmpsdk/: CMakeLists.txt  COPYING  README  buildXMPsdk.cmd  buildXMPsdk.sh  meson.build  my_echo.cpp  sal_compat.h
(+3288 files in other folders)
